fix dropdown menu not showing on desktop

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -646,14 +646,18 @@ footer {
     }
 
     header {
+        z-index: 1;
+
         & nav {
             background-color: transparent;
+            z-index: 0;
 
             & #nav_close {
                 display: none;
             }
 
             & .nav_links {
+                z-index: 1;
                 position: static;
                 background-color: transparent;
                 justify-content: flex-end;
